<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <ImageView
        android:id="@+id/artImageViewDetail"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="80dp"
        android:layout_marginBottom="26dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baseline_add_24"
       />

    <EditText
        android:id="@+id/nameTextDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter Name"
        android:inputType="textPersonName"
        android:layout_marginLeft="90dp"
       />

    <EditText
        android:layout_marginLeft="90dp"
        android:id="@+id/artistTextDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="Enter Artist"
        android:inputType="textPersonName"
       />

    <EditText
        android:layout_marginLeft="90dp"
        android:id="@+id/yearTextDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="37dp"
        android:ems="10"
        android:hint="Enter Year"
        android:inputType="textPersonName"
        />
    <Button
        android:id="@+id/saveButton"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:text="Save"
        android:layout_marginLeft="150dp"
        />


</LinearLayout>